fixing overflow

--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -12,3 +12,8 @@
 .p__comorant {
   color: var(--color-white);
 }
+@media screen and (max-width: 390px) {
+  .app__header-h1 {
+    font-size: 70px;
+  }
+}
